fixed artGallery overflow

--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ html{
     max-width: 95%;
     justify-content: center;
     align-items: center;
-    max-height: 480px;
+    height: 500px;
     box-shadow: 0 8px 5px rgba(0, 0, 0, 0.75);
 }
 
@@ -156,7 +156,7 @@ html{
     grid-template-columns: repeat(10, 1fr);
     grid-template-rows: repeat(5, 1fr);
     width: auto;
-    height: auto;
+    max-height: 450px;
 }
 
 #artLeft, #artRight{
